--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                   <div class="card">
                     <img src="team1.jpg" alt="">
                     <div class="container">
-                      <h2>Jane</h2>
+                      <h2 style="text-align: center;">Jane</h2>
                       <p class="title">Designer</p>
                       <p>Some text that describes me.</p>
                       <p>jane@example.com</p>
@@ -46,7 +46,7 @@
                     <div class="card">
                       <img src="team2.jpg" alt="">
                       <div class="container">
-                        <h2>Mike</h2>
+                        <h2 style="text-align: center;">Mike</h2>
                         <p class="title">Designer</p>
                         <p>Some text that describes me.</p>
                         <p>mike@example.com</p>
@@ -58,7 +58,7 @@
                     <div class="card">
                       <img src="team3.jpg" alt="">
                       <div class="container">
-                        <h2 style="text-align: center; margin-top: 5px;">John</h2>
+                        <h2 style="text-align: center;">John</h2>
                         <p class="title">Designer</p>
                         <p>Some text that describes me.</p>
                         <p>john@example.com</p>
